# crypto_api_osrandom

./: .appveyor.yml  .gitignore  Cargo.toml  README.md  build.rs
helpers/: helpers.c
librandom/: arc4random.c  cryptgenrandom.c  getrandom.c  secrandomcopybytes.c  urandom.c
src/: crypto_api.rs  error.rs  lib.rs
tests/: osrandom.rs  test.rs
