[package]
name = "crypto_api_osrandom"
edition = "2018"
version = "0.1.0"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "An interface to the OS' secure random number generator for `crypto_api`"
keywords = ["Crypto", "Random", "CSPRNG", "PRNG", "RNG"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/crypto_api_osrandom"
readme = "README.md"


[dependencies]
crypto_api = { git = "https://github.com/KizzyCode/crypto_api", version = "0.1.11" }

[build-dependencies]
cc = "1.0.30"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true