[package]
name = "crypto_api_osrandom"
edition = "2021"
version = "0.2.0"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "An interface to the OS' secure random number generator for `crypto_api`"
keywords = ["Crypto", "Random", "CSPRNG", "PRNG", "RNG"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/crypto_api_osrandom"
readme = "README.md"

[badges]
appveyor = { repository = "KizzyCode/crypto_api_osrandom" }
maintenance = { status = "passively-maintained" }
is-it-maintained-open-issues = { repository = "KizzyCode/crypto_api_osrandom" }
is-it-maintained-issue-resolution = { repository = "KizzyCode/crypto_api_osrandom" }


[features]
default = []


[dependencies]
crypto_api = { version = "0.2.2", optional = true }

[build-dependencies]
cc = "1.0"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
